# Mastering-Data-Structures-and-Algorithms-Course

./: .clang-format  .clang-tidy  .cmake-format.yaml  CMakeLists.txt  README.md  cppcheck-suppress-list.txt
docs/: CMakeLists.txt  main.dox
include/algorithms/: Recursion.hpp
include/common/: Common.hpp
include/data-structures/: ArrayAdt.hpp  DiagonalMatrix.hpp  LinkedList.hpp  MatrixAdt.hpp  NormalMatrix.hpp  Queue.hpp  Stack.hpp
include/data-structures/matrix-concept/: MatrixAdt.hpp
include/data-structures/matrix-types/: DiagonalMatrix.hpp  LowerTriangularMatrix.hpp  MatrixCommon.hpp  MatrixConcept.hpp  NormalMatrix.hpp
scripts/: build.sh  format.sh  run-clang-tidy.sh  run-cppcheck.sh  run-tests.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/: Recursion.hpp
src/data-structures/: ArrayAdt.hpp
test/: ArrayAdt_test.cpp  CMakeLists.txt  DiagonalMatrix_test.cpp  LinkedList_test.cpp  LowerTriangularMatrix_test.cpp  MatrixAdt_test.cpp  NormalMatrix_test.cpp  Queue_test.cpp  Recursion_test.cpp  Stack_test.cpp
tests/: CMakeLists.txt  main.cpp
